# crowpeas

./: .gitignore  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  implemented_with_larch.ipynb  install.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.json  test.toml  test_compile.py  test_plan.md  tox.ini
.github/: ISSUE_TEMPLATE.md
BNN_Au/: predictions.toml  training10k.toml
BNN_Au/training_set/: Au training_training_data_parameters.feather
BNN_Pd/: predictions.toml  training10k.toml
BNN_Pd/training_set/: Pd training_training_data_parameters.feather
BNN_Pt/: predictions.toml  training10k.toml
BNN_Pt/training_set/: Pt training_training_data_parameters.feather
BNN_Rh/: predictions.toml  training10k.toml  training20k_60Ktrain_qspace_2L.toml  training20k_qspace.toml  training20k_qspace_2L.toml
BNN_Rh/output_qspace/: predictions.toml  training20k_qspace.toml
BNN_Rh/output_qspace/output_qspace/: training20k_qspace.toml
BNN_Rh/output_qspace_2L/: predictions.toml  training20k_60Ktrain_qspace_2L.toml  training20k_qspace_2L.toml
BNN_Rh/training_set/: Rh training_training_data_parameters.feather
BNN_Rh/training_set_60K/: Rh training_training_data_60K_parameters.feather
Figures/: crowpeas_figures.ipynb
MLP_Au/: predictions.toml  training10k.toml
MLP_Au/output_qspace/: predictions.toml  training10k_qspace.toml
MLP_Au/training_set/: Au training_training_data_parameters.feather
MLP_Pd/: predictions.toml  training10k.toml
MLP_Pd/output_qspace/: predictions.toml  training10k_qspace.toml
MLP_Pd/training_set/: Pd training_training_data_parameters.feather
MLP_Pt/: predictions.toml  training10k.toml  training10k_qspace.toml
MLP_Pt/output_qspace/: predictions.toml
MLP_Pt/training_set/: Pt training_training_data_parameters.feather
MLP_Rh/: predictions.toml  training10k.toml  training10k_qspace.toml
MLP_Rh/output_qspace/: predictions.toml  training10k_qspace.toml
MLP_Rh/training_set/: Rh training_training_data_parameters.feather
docs/: Makefile  conf.py  crowpeas.model.rst  crowpeas.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
example_exp/: training copy.toml  training.toml  training10k.toml  training_initial.toml
example_exp/exp_data/: Rhfoil1_r_1.3_3.chiq
example_exp/training_set/: Rh training_training_data_parameters.feather
example_exp_mlp/: training10k.toml
example_exp_mlp/training_set/: Rh training_training_data_parameters.feather
examples/: training.toml
examples/Pd/exp_data/: Pdfoil-Feb08-X18B.chik
examples/Pd/input_file/: input_Pd.toml
exp_data/Ag/: Ag_C7.chik  Agfoil.chik
exp_data/Au/: Au147_-_0_Thiol_-_297K.chik  Aufoil.chik
exp_data/Pd/: Pd_SHP_01F_He_RT_R.chik
exp_data/Pt/: Pt_SiO2.chik  Pt_ceria_H2_150_rt.chik  Ptfoil.chik  Ptfoil_APS.chik
exp_data/Rh/: Rhfoil-x18b.chik  Sample_2_Rh.chik
hetMLP_Rh/: predictions.toml  training10k.toml
hetMLP_Rh/training_set/: Rh_parameters.feather
refactor_test/: config.toml
refactor_test/output/output_x/: config.toml  predictions.toml
src/crowpeas/: __init__.py  check_workers.py  cli.py  core.py  crowpeas.py  data_generator.py  data_generatorS.py  data_loader.py  data_loader_NODE copy.py  data_loader_NODE.py  sample_config.toml  sample_exp_config.toml  utils.py
src/crowpeas/model/: BNN.py  CNN.py  Het-MLP.py  HetMLPNM.py  MLP.py  NODE copy.py  NODE.py  __init__.py  activation.py
test_run/: input_Pd.toml
test_run/exp_data/: Pd_SHP_01F_H2-293K.chik
test_run/output/: input_Pd.toml
tests/: __init__.py  test_basic_functionality.py  test_core.py  test_crowpeas.py
tests/NODE_Rh/: training10k_qspace.toml
tests/NODE_Rh/checkpoint/: Rh training qspace s-epoch=967.ckpt  Rh training qspace s-epoch=9971.ckpt
tests/NODE_Rh/output_qspace_s/: training10k_qspace.toml
tests/NODE_Rh/output_qspace_s_516x2/: training10k_qspace.toml
tests/NODE_Rh/output_qspace_s_516x2relu/: training10k_qspace.toml
tests/NODE_Rh/training_set_S/: training_masks.feather  training_metadata.json
tests/read_seq/: training10k_qspace.toml
tests/read_seq/output/: training10k_qspace.toml
validation/: eins_val.py  find_debye.py  find_debye_2.py
