[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crowpeas"
version = "0.1.0"
description = "EXAFS fitting using Neural Network"
readme = "README.rst"
authors = [{ name = "Ameyanagi", email = "contact@ameyanagi.com" }]
maintainers = [{ name = "Ameyanagi", email = "contact@ameyanagi.com" }]
classifiers = []
license = { text = "MIT license" }
dependencies = [
    "typer",
    "lightning",
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "rich",
    "toml",
    "torch",
    "torchbnn",
    "torchmetrics",
    "xraylarch",
]

[project.optional-dependencies]
dev = [
    "coverage", # testing
    "pyright",  # linting
    "pytest",   # testing
    "ruff",     # linting
]

[project.scripts]
crowpeas = "crowpeas.cli:app"

[project.urls]

bugs = "https://github.com/Ameyanagi/crowpeas/issues"
changelog = "https://github.com/Ameyanagi/crowpeas/blob/master/changelog.md"
homepage = "https://github.com/Ameyanagi/crowpeas"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]
